Fixing gap underneath footer

--- a/sass/universal.scss
+++ b/sass/universal.scss
@@ -483,14 +483,15 @@ footer {
   align-items: center;
   padding: $section-spacing-medium $paragraph-spacing-small;
   background-color: $dark-background-colour;
-  margin: 0;
+  margin: 0 0 -50px;
   position: sticky;
   bottom: 0;
   left: 0;
+  right: 0;
   width: 100%;
   z-index: 1;
   // Fixes stick footer overflow
-  max-height: 115vh;
+  max-height: 100vh;
 
   @include breakpoint(1000) {
     max-height: 100vh;
